tdf#118043 dbahsql: Fix putDot funciton

Change-Id: Ia49b7e852446b05a4e20a7ff0c32d8acc6da52b2
Reviewed-on: https://gerrit.libreoffice.org/55594
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Bunth <btomi96@gmail.com>